--- a/app/transaction.component.html
+++ b/app/transaction.component.html
@@ -1,12 +1,13 @@
 <h2>{{subtitle}}</h2>
 <div>
-    <table class="table">
-        <tr *ngFor="let transaction of transactions" 
+    <table class="table table-condensed">
+        <tr *ngFor="let transaction of transactions | paginate: { id: 'server', itemsPerPage: page_size, currentPage: page, totalItems: count }" 
             [class.selected]="transaction === selectedTransaction"
             (click)="onSelect(transaction)">
             <td>{{transaction.when | date}}</td>
-            <td>{{transaction.description}}</td>
-            <td>{{transaction.amount | currency}}</td>
+            <td>{{transaction.description | slice:0:50}}</td>
+            <td>{{transaction.amount | currency:'AUD':true}}</td>
+            <td>{{transaction.category_name}}</td>
             <td>
             <button class="btn btn-default"
                 (click)="delete(transaction); $event.stopPropagation()">
@@ -14,6 +15,28 @@
             </button></td>
         </tr>
     </table>
+    <div class="is-text-centered ">
+    <div class="spinner" [ngClass]="{ 'hidden': !loading }"></div>
+    <pagination-controls #pagination (pageChange)="getTransactions($event)" id="server">
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+        <li [class.disabled]="pagination.isFirstPage()">
+            <a (click)="pagination.previous()">&laquo;</a>
+        </li>
+
+        <li *ngFor="let page of pagination.pages" [class.active]="pagination.getCurrent() === page.value">
+            <a (click)="pagination.setCurrent(page.value)">
+                <span>{{ page.label }}</span>
+            </a>
+        </li>
+
+        <li [class.disabled]="pagination.isLastPage()" *ngIf="pagination.directionLinks">
+            <a *ngIf="!pagination.isLastPage()" (click)="pagination.next()">&raquo;</a>
+        </li>
+        </ul>
+    </nav>
+    </pagination-controls>
+</div>
 </div>
 <div *ngIf="selectedTransaction">
     <h2>
