--- a/app/transaction.component.html
+++ b/app/transaction.component.html
@@ -1,25 +1,28 @@
-<h2>{{subtitle}}</h2>
-<div>
+<div class="row">
+<div class="col-md-11">
     <table class="table table-condensed">
         <tr *ngFor="let transaction of transactions | paginate: { id: 'server', itemsPerPage: page_size, currentPage: page, totalItems: count }" 
-            [class.selected]="transaction === selectedTransaction"
+            [class.active]="transaction === selectedTransaction"
             (click)="onSelect(transaction)">
             <td>{{transaction.when | date}}</td>
             <td>{{transaction.description | slice:0:50}}</td>
-            <td>{{transaction.amount | currency:'AUD':true}}</td>
-            <td>{{transaction.category_name}}</td>
+            <td class="text-right">{{transaction.amount | currency:'AUD':true}}</td>
+            <td><span class="label label-default">{{transaction.category_name}}</span></td>
             <td>
+            <button class="btn btn-default"
+                (click)="edit(transaction); $event.stopPropagation()">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </button>
             <button class="btn btn-default"
                 (click)="delete(transaction); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             </button></td>
         </tr>
     </table>
-    <div class="is-text-centered ">
-    <div class="spinner" [ngClass]="{ 'hidden': !loading }"></div>
     <pagination-controls #pagination (pageChange)="getTransactions($event)" id="server">
+    <div>&nbsp;<span class="spinner" [class.hidden]="!loading">Loading...</span></div>
     <nav aria-label="Page navigation">
-        <ul class="pagination">
+        <ul class="pagination pagination-lg">
         <li [class.disabled]="pagination.isFirstPage()">
             <a (click)="pagination.previous()">&laquo;</a>
         </li>
@@ -31,11 +34,18 @@
         </li>
 
         <li [class.disabled]="pagination.isLastPage()" *ngIf="pagination.directionLinks">
-            <a *ngIf="!pagination.isLastPage()" (click)="pagination.next()">&raquo;</a>
+            <a (click)="pagination.next()">&raquo;</a>
         </li>
         </ul>
     </nav>
     </pagination-controls>
+</div>
+<div class="col-md-1">
+    <ul>
+        <li>Time</li>
+        <li>Category</li>
+        <li>Account</li>
+    </ul>
 </div>
 </div>
 <div *ngIf="selectedTransaction">
