--- a/app/transaction.component.html
+++ b/app/transaction.component.html
@@ -1,19 +1,19 @@
 <div class="row">
-<div class="col-md-11">
+<div class="col-md-10">
     <table class="table table-condensed">
         <tr *ngFor="let transaction of transactions | paginate: { id: 'server', itemsPerPage: page_size, currentPage: page, totalItems: count }" 
             [class.active]="transaction === selectedTransaction"
             (click)="onSelect(transaction)">
             <td>{{transaction.when | date}}</td>
-            <td>{{transaction.description | slice:0:50}}</td>
+            <td>{{transaction.description | slice:0:30}}</td>
             <td class="text-right">{{transaction.amount | currency:'AUD':true}}</td>
             <td><span class="label label-default">{{transaction.category_name}}</span></td>
             <td>
-            <button class="btn btn-default"
+            <button class="btn btn-default btn-sm"
                 (click)="edit(transaction); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </button>
-            <button class="btn btn-default"
+            <button class="btn btn-default btn-sm"
                 (click)="delete(transaction); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             </button></td>
@@ -40,12 +40,21 @@
     </nav>
     </pagination-controls>
 </div>
-<div class="col-md-1">
-    <ul>
-        <li>Time</li>
-        <li>Category</li>
-        <li>Account</li>
-    </ul>
+<div class="col-md-2">
+    <h3>Time</h3>
+    <h3>Category</h3>
+    <div class="btn-group-vertical" role="group">
+        <button [class.active]="filterCategory === null" 
+                class="btn btn-default btn-xs"
+                (click)="setFilterCategory(null)">All</button>
+        <button *ngFor="let category of categories"
+                class="btn btn-default btn-xs" 
+                [class.active]="category == filterCategory"
+                (click)="setFilterCategory(category)">
+        {{category.name}}
+        </button>
+    </div>
+    <h3>Account</h3>
 </div>
 </div>
 <div *ngIf="selectedTransaction">
