--- a/app/transaction.component.html
+++ b/app/transaction.component.html
@@ -1,22 +1,30 @@
 <div class="row">
 <div class="col-md-10">
+    <categoriser-component #categoriser [transaction]="selectedTransaction"></categoriser-component>
     <table class="table table-condensed">
         <tr *ngFor="let transaction of transactions | paginate: { id: 'server', itemsPerPage: page_size, currentPage: page, totalItems: count }" 
             [class.active]="transaction === selectedTransaction"
             (click)="onSelect(transaction)">
             <td>{{transaction.when | date}}</td>
             <td>{{transaction.description | slice:0:30}}</td>
-            <td class="text-right">{{transaction.amount | currency:'AUD':true}}</td>
+            <td class="text-right">{{transaction.amount | currency:AUD:true}}</td>
             <td><span class="label label-default">{{transaction.category_name}}</span></td>
             <td>
+            <div class="btn-group">
             <button class="btn btn-default btn-sm"
                 (click)="edit(transaction); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
             </button>
             <button class="btn btn-default btn-sm"
+                (click)="categoriser.show(transaction)">
+                <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
+            </button>
+            <button class="btn btn-default btn-sm"
                 (click)="delete(transaction); $event.stopPropagation()">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-            </button></td>
+            </button>
+            </div>
+            </td>
         </tr>
     </table>
     <pagination-controls #pagination (pageChange)="getTransactions($event)" id="server">
@@ -63,6 +71,7 @@
     <h3>Account</h3>
 </div>
 </div>
+
 <div *ngIf="selectedTransaction">
     <h2>
     {{selectedTransaction.description | uppercase}}
