--- a/src/client/app/categoriser.component.html
+++ b/src/client/app/categoriser.component.html
@@ -1,6 +1,7 @@
 <div bsModal #catmodal="bs-modal" id="categoriser" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+      <category-create #newcat (onSave)="getCategories()"></category-create>
       <div class="modal-header">
         <button type="button" class="close" aria-label="Close" (click)="hide()">
           <span aria-hidden="true">&times;</span>
@@ -51,8 +52,11 @@
                         <select [attr.id]="'selcat' + i" formControlName="category" class="form-control">
                           <option *ngFor="let cat of categories" value={{cat.id}}>{{cat.name}}</option>
                         </select>
+                        <button class="btn btn-default btn-sm" (click)="newcat.show()">
+                          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
                       </div>
-                      <!--display error message if street is not valid-->
+                      <!--display error message if category is not valid-->
                       <small [class.hidden]="catForm.controls.splits.controls[i].controls.category.valid"
                              class="col-sm-10 col-sm-offset-2 help-block">
                           Category is required
