--- a/src/client/app/login.component.html
+++ b/src/client/app/login.component.html
@@ -12,6 +12,6 @@
                [(ngModel)]="details.password"
                class="form-control"/>
       </div>
-      <button type="submit" class="btn btn-default" (click)=submit()>Submit</button>
+      <button type="submit" class="btn btn-default" (click)="submit()">Submit</button>
     </form>
 </div>
